<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/olivedrab"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/txt_header_verify"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/colorBg"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_header">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_editor_absoluteX="16dp">

                <EditText
                    android:id="@+id/edit_txt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_full_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_mob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout_addr1"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout_alter_mob"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_full_name"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingClass,MissingConstraints">

                <EditText
                    android:id="@+id/edit_txt_mob"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_mob"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_alter_mob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toStartOf="@id/textInputLayout_pincode"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout_mob"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_full_name"
                tools:ignore="MissingClass,MissingConstraints">

                <EditText
                    android:id="@+id/edit_txt_alter_mob"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_alternate_mob"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_addr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_alter_mob"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_editor_absoluteX="16dp">

                <EditText
                    android:id="@+id/edit_txt_addr1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_address1"
                    android:inputType="textPostalAddress"
                    android:lines="4"
                    android:singleLine="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_addr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_addr1"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_editor_absoluteX="16dp">

                <EditText
                    android:id="@+id/edit_txt_addr2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_address2"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_addr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_addr2"
                tools:ignore="MissingClass,MissingConstraints"
                tools:layout_editor_absoluteX="16dp">

                <EditText
                    android:id="@+id/edit_txt_addr3"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_address3"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_addr4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/btn_save"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout_addr5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_addr3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingClass,MissingConstraints">

                <EditText
                    android:id="@+id/edit_txt_addr4"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_address4"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_pincode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout_alter_mob"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_full_name"
                tools:ignore="MissingClass,MissingConstraints">

                <EditText
                    android:id="@+id/edit_txt_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_pincode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_addr5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout_addr4"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_addr3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingClass,MissingConstraints">

                <EditText
                    android:id="@+id/edit_txt_addr5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawablePadding="10dip"
                    android:hint="@string/edit_txt_hint_address5"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:theme="@style/MyEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/add_btn_backgd"
                android:padding="8dp"
                android:text="@string/btn_save"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_addr5"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/remove_btn_backgd"
                android:padding="5dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btn_save"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_addr5"
                app:layout_constraintVertical_bias="0.944"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


